# mios-terminal-

./: .gitignore  LICENSE  README.md  hello.cpp  pyproject.toml  requirements.txt  setup.py  test_error.py  test_llm.py
mios/ai/: command_llm.py  intent_classifier.py  llm_client.py  prompt_templates.py
mios/cli/: main.py  shell.py
mios/core/: agent_loop.py  agent_planner.py  context_builder.py  executor.py  interpreter.py  llm_planner.py  observer.py  planner.py  result_evaluator.py  session.py  task_graph.py  tool_registry.py
mios/debug/: error_parser.py
mios/memory/: context_store.py  episode_memory.py  error_memory.json  error_memory.py
mios/tools/: code_editor.py  environment_detector.py  error_parser.py  git_tools.py  log_analyzer.py  project_analyzer.py  project_state.py  run_program.py  system_info.py
